--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-file-system": "~14.0.0",
     "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
     "phosphor-react-native": "^1.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
