--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@gorhom/bottom-sheet": "^4.3.1",
+    "@react-navigation/material-top-tabs": "^6.2.1",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
@@ -23,12 +24,16 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-pager-view": "5.4.15",
     "react-native-reanimated": "~2.8.0",
     "react-native-svg": "12.3.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-view-shot": "3.1.2",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
