--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "web": "expo start --web",
     "eject": "expo eject"
   },
+  "rnpm": {
+    "assets": [
+      "./src/assets/fonts/Courgette"
+    ]
+  },
   "dependencies": {
-    "@expo-google-fonts/inter": "^0.2.2",
+    "@expo-google-fonts/courgette": "^0.2.2",
     "@gorhom/bottom-sheet": "^4.3.1",
     "@react-navigation/material-top-tabs": "^6.2.1",
     "axios": "^0.27.2",
@@ -18,6 +23,7 @@
     "expo-app-loading": "~2.0.0",
     "expo-file-system": "~14.0.0",
     "expo-font": "~10.1.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.2",
     "phosphor-react-native": "^1.1.2",
@@ -29,6 +35,7 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-pager-view": "5.4.15",
     "react-native-reanimated": "~2.8.0",
+    "react-native-responsive-dimensions": "^3.1.1",
     "react-native-svg": "12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-view-shot": "3.1.2",
