--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "expo-updates": "~0.13.2",
     "phosphor-react-native": "^1.1.2",
     "react": "17.0.2",
+    "react-bootstrap-icons": "^1.8.4",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-bootstrap-icons": "^1.5.0",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-iphone-x-helper": "^1.3.1",
