--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-svg": "12.3.0",
+    "react-native-system-navigation-bar": "^1.0.5",
     "react-native-tab-view": "^3.1.1",
     "react-native-view-shot": "3.1.2",
     "react-native-web": "0.17.7",
