--- a/app.json
+++ b/app.json
@@ -18,14 +18,10 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": false
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#27272A"
-      },
-      "package": "RND.App"
+      "package": "rnd.app"
     },
     "web": {
       "favicon": "./assets/favicon.png"
