--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "expo-font": "~10.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.2",
+    "expo-updates": "~0.13.3",
     "phosphor-react-native": "^1.1.2",
     "react": "17.0.2",
     "react-bootstrap-icons": "^1.8.4",
@@ -40,7 +40,7 @@
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.8.0",
     "react-native-responsive-dimensions": "^3.1.1",
-    "react-native-svg": "12.3.0",
+    "react-native-svg": "^12.3.0",
     "react-native-system-navigation-bar": "^1.0.5",
     "react-native-tab-view": "^3.1.1",
     "react-native-view-shot": "3.1.2",
