--- a/app.json
+++ b/app.json
@@ -4,8 +4,8 @@
     "slug": "rnd",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
     "userInterfaceStyle": "dark",
+    "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -18,6 +18,10 @@
       "**/*"
     ],
     "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#09090a"
+      },
       "package": "rnd.app"
     },
     "web": {
