--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "@expo-google-fonts/courgette": "^0.2.2",
-    "@gorhom/bottom-sheet": "^4.3.1",
     "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "axios": "^0.27.2",
@@ -31,7 +30,7 @@
     "react": "17.0.2",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "17.0.2",
-    "react-native": "^0.69.1",
+    "react-native": "0.68.2",
     "react-native-bootstrap-icons": "^1.5.0",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~2.2.1",
@@ -41,7 +40,7 @@
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.8.0",
     "react-native-responsive-dimensions": "^3.1.1",
-    "react-native-svg": "^12.3.0",
+    "react-native-svg": "12.3.0",
     "react-native-system-navigation-bar": "^1.0.5",
     "react-native-tab-view": "^3.1.1",
     "react-native-view-shot": "3.1.2",
@@ -51,7 +50,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.66.13",
+    "@types/react-native": "~0.67.6",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "~4.3.5"
   },
