--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo-google-fonts/courgette": "^0.2.2",
     "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
+    "@types/react-native-animated-progress": "^1.0.0",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
@@ -26,11 +27,13 @@
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
+    "metro-hermes-compiler": "^0.71.3",
     "phosphor-react-native": "^1.1.2",
     "react": "17.0.2",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-animated-progress": "^1.0.2",
     "react-native-bootstrap-icons": "^1.5.0",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~2.2.1",
